force-app/main/default/objects/Exam__c/Exam__c.object-meta.xml
<CustomObject>
    <description>This is the base exam.  It has 3 record types for Standard Exam, Question Bank Exam and Adaptive Exam</description>
    <label>Base Exam</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Exam Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Base Exams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>