force-app/main/default/objects/Exam__c/fields/Number_of_adaptive_questions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_adaptive_questions__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Number of adaptive questions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>