force-app/main/default/objects/Exam__c/fields/Number_of_questions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_questions__c</fullName>
    <label>Number of questions</label>
    <summaryForeignKey>Question__c.Exam__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>