force-app/main/default/objects/Exam__c/fields/Question_Bank_Exam__c.field-meta.xml
<CustomField>
    <fullName>Question_Bank_Exam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Bank Exam</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Exam__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Question Bank</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Exam__c</referenceTo>
    <relationshipName>Exams</relationshipName>
    <type>Lookup</type>
</CustomField>