force-app/main/default/objects/Exam__c/fields/Shuffle_Questions__c.field-meta.xml
<CustomField>
    <fullName>Shuffle_Questions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Shuffle Questions</label>
    <type>Checkbox</type>
</CustomField>