force-app/main/default/objects/Exam__c/recordTypes/Adaptive_Exam.recordType-meta.xml
<RecordType>
    <fullName>Adaptive_Exam</fullName>
    <active>true</active>
    <label>Adaptive Exam</label>
</RecordType>