force-app/main/default/objects/Exam__c/recordTypes/Question_Bank.recordType-meta.xml
<RecordType>
    <fullName>Question_Bank</fullName>
    <active>true</active>
    <label>Question Bank</label>
</RecordType>