force-app/main/default/objects/Exam__c/recordTypes/Standard_Exam.recordType-meta.xml
<RecordType>
    <fullName>Standard_Exam</fullName>
    <active>true</active>
    <label>Standard Exam</label>
</RecordType>