force-app/main/default/objects/Exam__c/listViews/Adaptive_Exams.listView-meta.xml
<ListView>
    <fullName>Adaptive_Exams</fullName>
    <columns>NAME</columns>
    <columns>Descriptive_Name__c</columns>
    <columns>Duration__c</columns>
    <columns>Number_of_adaptive_questions__c</columns>
    <columns>Question_Bank_Exam__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Exam__c.Adaptive_Exam</value>
    </filters>
    <label>Adaptive Exams</label>
</ListView>