force-app/main/default/objects/Exam__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Descriptive_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Number_of_questions__c</columns>
    <columns>Number_of_adaptive_questions__c</columns>
    <columns>Duration__c</columns>
    <columns>Shuffle_Questions__c</columns>
    <columns>Question_Bank_Exam__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>