force-app/main/default/objects/Exam__c/listViews/Question_Bank_Exam.listView-meta.xml
<ListView>
    <fullName>Question_Bank_Exam</fullName>
    <columns>NAME</columns>
    <columns>Descriptive_Name__c</columns>
    <columns>Number_of_questions__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Exam__c.Question_Bank</value>
    </filters>
    <label>Question Bank Exam</label>
</ListView>