force-app/main/default/objects/Exam__c/listViews/Standard_Exams.listView-meta.xml
<ListView>
    <fullName>Standard_Exams</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Descriptive_Name__c</columns>
    <columns>Duration__c</columns>
    <columns>Shuffle_Questions__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Exam__c.Standard_Exam</value>
    </filters>
    <label>Standard Exams</label>
</ListView>